--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,6 @@
 {
-  "printWidth": 100,
   "singleQuote": true,
   "semi": true,
   "trailingComma": "all",
-  "arrowParens": "always"
+  "printWidth": 100
 }
